Address Sonar findings in report Writer and its tests
- Latch RuntimeException and AssertionError only; other Errors propagate unlatched
- Hold the writer monitor explicitly while awaiting detail writes
- Replace duplicated detail path construction with detailPath()
- Drop Stream.peek and Collectors.toList in favour of direct population and Stream.toList
- Keep only one throwing invocation inside assertThrows lambdas; use try-with-resources